--- a/index.html
+++ b/index.html
@@ -62,14 +62,7 @@
 
   <div class="w3-row-padding w3-grayscale">
     <div class="w3-col l3 m6 w3-margin-bottom">
-      <img src="./image/WhatsApp Image 2023-08-30 at 5.33.13 PM (copy).jpeg" alt="khilesh" style="width:100%">
-      <h3>Khilesh</h3>
-      <p class="w3-opacity">Developer</p>
-      <p>PG-DAC March-23.</p>
-      <p><button class="w3-button w3-light-grey w3-block">Contact</button></p>
-    </div>
-    <div class="w3-col l3 m6 w3-margin-bottom">
-      <img src="./image/WhatsApp Image 2023-08-30 at 5.37.20 PM (copy).jpeg" alt="prakhar" style="width:100%">
+      <img src="./image/WhatsApp Image 2023-08-30 at 5.37.20 PM (copy).jpeg" alt="Prakhar" style="width:100%">  <!-- khilesh="./image/WhatsApp Image 2023-08-30 at 5.33.13 PM (copy).jpeg" -->
       <h3>Prakhar</h3>
       <p class="w3-opacity">Developer</p>
       <p>PG-DAC March-23.</p>
@@ -84,7 +77,14 @@
     </div>
     <div class="w3-col l3 m6 w3-margin-bottom">
       <img src="./image/1687790798218-removebg-preview (4).png" alt="vicky" style="width:100%">
-      <h3>Vicky</h3>
+      <h3>Vikas</h3>
+      <p class="w3-opacity">Developer</p>
+      <p>PG-DAC March-23.</p>
+      <p><button class="w3-button w3-light-grey w3-block">Contact</button></p>
+    </div>
+    <div class="w3-col l3 m6 w3-margin-bottom">
+      <img src="./image/WhatsApp Image 2023-08-30 at 5.33.13 PM (copy).jpeg" alt="khilesh" style="width:100%">
+      <h3>Khilesh</h3>
       <p class="w3-opacity">Developer</p>
       <p>PG-DAC March-23.</p>
       <p><button class="w3-button w3-light-grey w3-block">Contact</button></p>
