--- a/index.html
+++ b/index.html
@@ -62,38 +62,38 @@
 
   <div class="w3-row-padding w3-grayscale">
     <div class="w3-col l3 m6 w3-margin-bottom">
-      <img src="./image/WhatsApp Image 2023-08-30 at 5.37.20 PM (copy).jpeg" alt="Prakhar" style="width:100%">  <!-- khilesh="./image/WhatsApp Image 2023-08-30 at 5.33.13 PM (copy).jpeg" -->
+      <img src="./image/WhatsApp Image 2023-08-30 at 5.37.20 PM (copy).jpeg" alt="Prakhar" style="width:100%">
       <h3>Prakhar</h3>
       <p class="w3-opacity">Developer</p>
-      <p>PG-DAC March-23.</p>
+      <p>Likes to watch Web series and Animes,free time gamer.</p>
       <p><button class="w3-button w3-light-grey w3-block">Contact</button></p>
     </div>
     <div class="w3-col l3 m6 w3-margin-bottom">
       <img src="./image/WhatsApp Image 2023-08-30 at 5.46.14 PM (copy).jpeg" alt="kapil" style="width:100%">
       <h3>Kapil</h3>
       <p class="w3-opacity">Developer</p>
-      <p>PG-DAC March-23.</p>
+      <p>Loves to explore new place a "globetrotter".</p>
       <p><button class="w3-button w3-light-grey w3-block">Contact</button></p>
     </div>
     <div class="w3-col l3 m6 w3-margin-bottom">
       <img src="./image/1687790798218-removebg-preview (4).png" alt="vicky" style="width:100%">
       <h3>Vikas</h3>
       <p class="w3-opacity">Developer</p>
-      <p>PG-DAC March-23.</p>
+      <p>Free time singer and an absolute musician.</p>
       <p><button class="w3-button w3-light-grey w3-block">Contact</button></p>
     </div>
     <div class="w3-col l3 m6 w3-margin-bottom">
       <img src="./image/WhatsApp Image 2023-08-30 at 5.33.13 PM (copy).jpeg" alt="khilesh" style="width:100%">
       <h3>Khilesh</h3>
       <p class="w3-opacity">Developer</p>
-      <p>PG-DAC March-23.</p>
+      <p>Do cooking when not coding.</p>
       <p><button class="w3-button w3-light-grey w3-block">Contact</button></p>
     </div>
     <div class="w3-col l3 m6 w3-margin-bottom">
       <img src="./image/WhatsApp Image 2023-08-30 at 5.48.21 PM (copy).jpeg" alt="suyash" style="width:100%">
       <h3>Suyash</h3>
       <p class="w3-opacity">Developer</p>
-      <p>PG-DAC March-23.</p>
+      <p>Loves to ride bike.</p>
       <p><button class="w3-button w3-light-grey w3-block">Contact</button></p>
     </div>
   </div>
