--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
       <img src="./image/WhatsApp Image 2023-08-30 at 5.37.20 PM (copy).jpeg" alt="Prakhar" style="width:100%">
       <h3>Prakhar</h3>
       <p class="w3-opacity">Developer</p>
-      <p>Likes to watch Web series and Animes,free time gamer.</p>
+      <p>Likes to watch Web series and Animes.</p>
       <p><button class="w3-button w3-light-grey w3-block">Contact</button></p>
     </div>
     <div class="w3-col l3 m6 w3-margin-bottom">
