--- a/index.html
+++ b/index.html
@@ -14,11 +14,11 @@
     <a href="#home" class="w3-bar-item w3-button"><b>ShikshaBharat</b>Portal</a>
     <!-- Float links to the right. Hide them on small screens -->
     <div class="w3-right w3-hide-small">
-      <a href="http://localhost:3000/adminlogin" class="w3-bar-item w3-button">Admin</a>
-      <a href="http://localhost:3000/" class="w3-bar-item w3-button">Institute</a>
-      <a href="http://localhost:3000/studentlogin" class="w3-bar-item w3-button">Student's</a>
-      <a href="http://localhost:3000/desk" class="w3-bar-item w3-button">About</a>
-      <a href="http://localhost:3000/" class="w3-bar-item w3-button">Contact</a>
+      <a href="https://cdac-main-react-app.vercel.app/login" class="w3-bar-item w3-button">Admin</a>
+      <a href="https://cdac-main-react-app.vercel.app/institutelogin" class="w3-bar-item w3-button">Institute</a>
+      <a href="https://cdac-main-react-app.vercel.app/studentlogin" class="w3-bar-item w3-button">Student's</a>
+      <a href="" class="w3-bar-item w3-button">About</a>
+      <a href="" class="w3-bar-item w3-button">Contact</a>
     </div>
   </div>
 </div>
