--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
     </div>
     <div class="w3-col l3 m6 w3-margin-bottom">
       <img src="./image/WhatsApp Image 2023-08-30 at 5.48.21 PM (copy).jpeg" alt="suyash" style="width:100%">
-      <h3>Suyash</h3>
+      <h3>Suyash chutiya</h3>
       <p class="w3-opacity">Developer</p>
       <p>Loves to ride bike.</p>
       <p><button class="w3-button w3-light-grey w3-block">Contact</button></p>
